[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miaosuan-proc-ipv4"
version = "0.1.0"
description = "Miaosuan process model: ipv4"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ipv4"]
